--- a/sass/iphone12Section.scss
+++ b/sass/iphone12Section.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   width: 100%;
   height: 80vh;
-  background: url("/images/iphone-12-hero-mobile.jpg");
+  background: url("/images/iphone-12-hero-mobile.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
