--- a/sass/appleAtWorkSection.scss
+++ b/sass/appleAtWorkSection.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   width: 100%;
   height: 70vh;
-  background: url("/images/apple_at_work_mobile.jpg");
+  background: url("../images/apple_at_work_mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -36,7 +36,7 @@
 //media queries
 @media (min-width: 730px) {
   #appleAtWorkSection {
-    background: url("/images/apple_at_work_medium.jpg");
+    background: url("../images/apple_at_work_medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,7 +55,7 @@
 
 @media (min-width: 1000px) {
   #appleAtWorkSection {
-    background: url("/images/apple_at_work_large.jpg");
+    background: url("../images/apple_at_work_large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
