--- a/sass/appleMusicSection.scss
+++ b/sass/appleMusicSection.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   width: 100%;
   height: 70vh;
-  background: url("/images/billie_eilish-mobile.jpg");
+  background: url("../images/billie_eilish-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,7 +53,7 @@
 //media queries
 @media (min-width: 730px) {
   #appleMusicSection {
-    background: url("/images/billie_eilish-medium.jpg");
+    background: url("../images/billie_eilish-medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -77,7 +77,7 @@
 
 @media (min-width: 1000px) {
   #appleMusicSection {
-    background: url("/images/billie_eilish-large.jpg");
+    background: url("../images/billie_eilish-large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
