--- a/sass/ipadProSection.scss
+++ b/sass/ipadProSection.scss
@@ -7,7 +7,7 @@
   justify-content: flex-start;
   width: 100%;
   height: 70vh;
-  background: url("/images/hero-ipad-pro-mobile.jpg");
+  background: url("../images/hero-ipad-pro-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -62,7 +62,7 @@
 //media queries
 @media (min-width: 730px) {
   #ipadPro {
-    background: url("/images/hero-ipad-pro-medium.jpg");
+    background: url("../images/hero-ipad-pro-medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -89,7 +89,7 @@
 
 @media (min-width: 1000px) {
   #ipadPro {
-    background: url("/images/hero-ipad-pro-large.jpg");
+    background: url("../images/hero-ipad-pro-large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
