--- a/sass/iphone12ProSection.scss
+++ b/sass/iphone12ProSection.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   width: 100%;
   height: 70vh;
-  background: url("/images/iphone-12-pro-hero-mobile.jpg");
+  background: url("../images/iphone-12-pro-hero-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -71,7 +71,7 @@
 //media queries
 @media (min-width: 730px) {
   #iphone12Pro {
-    background: url("/images/iphone-12-pro-hero-medium.jpg");
+    background: url("../images/iphone-12-pro-hero-medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -109,7 +109,7 @@
 
 @media (min-width: 1000px) {
   #iphone12Pro {
-    background: url("/images/iphone-12-pro-hero-large.jpg");
+    background: url("../images/iphone-12-pro-hero-large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
