--- a/sass/iwatchSection.scss
+++ b/sass/iwatchSection.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   width: 100%;
   height: 70vh;
-  background: url("/images/watch-series-6-mobile.jpg");
+  background: url("../images/watch-series-6-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -70,7 +70,7 @@
 //media queries
 @media (min-width: 730px) {
   #iwatchSection {
-    background: url("/images/watch-series-6-medium.jpg");
+    background: url("../images/watch-series-6-medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -93,7 +93,7 @@
 
 @media (min-width: 1000px) {
   #iwatchSection {
-    background: url("/images/watch-series-6-large.jpg");
+    background: url("../images/watch-series-6-large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
