--- a/sass/uniSection.scss
+++ b/sass/uniSection.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 70vh;
   background-color: #b1dcec;
-  background: url("/images/uni-products-mobile.jpg");
+  background: url("../images/uni-products-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -51,7 +51,7 @@
 // Make grid section
 @media (min-width: 730px) {
   #uniSection {
-    background: url("/images/uni-products-medium.jpg");
+    background: url("../images/uni-products-medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -82,7 +82,7 @@
 
 @media (min-width: 1000px) {
   #uniSection {
-    background: url("/images/uni-products-large.jpg");
+    background: url("../images/uni-products-large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
