--- a/sass/appleTvSection.scss
+++ b/sass/appleTvSection.scss
@@ -75,7 +75,7 @@
 
 @media (min-width: 1000px) {
   #appleTvSection {
-    background: url("/images/ted_lasso_s2-large.jpg");
+    background: url("../images/ted_lasso_s2-large.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
