--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 80vh;
   background: url("../images/iphone-12-hero-mobile.jpg");
@@ -147,31 +148,19 @@
   background-size: cover;
   margin-top: 45px; }
   #iphone12 .title {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: 32px;
     font-weight: 500; }
   #iphone12 .subText {
-    font-size: 19px;
-    position: absolute;
-    top: 26%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
+    padding: 5px 0 0;
+    font-size: 19px; }
   #iphone12 .price {
-    position: absolute;
-    top: 32%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     font-size: 14px;
     text-align: center;
     color: #919195; }
   #iphone12 .links {
-    position: absolute;
-    top: 39%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
+    padding: 5px 0 0; }
     #iphone12 .links :nth-child(1) {
       padding-right: 15px; }
     #iphone12 .links .link {
@@ -189,20 +178,15 @@
     background-size: cover;
     height: 86vh; }
     #iphone12 .title {
-      font-size: 48px;
-      top: 18%; }
+      font-size: 48px; }
     #iphone12 .subText {
-      font-size: 24px;
-      top: 26%; }
+      font-size: 24px; }
     #iphone12 .price {
-      font-size: 17px;
-      top: 34%; }
+      font-size: 17px; }
       #iphone12 .price br {
         display: none; }
-    #iphone12 .links {
-      top: 42%; }
-      #iphone12 .links .link {
-        font-size: 19px; } }
+    #iphone12 .links .link {
+      font-size: 19px; } }
 
 @media (min-width: 1000px) {
   #iphone12 {
@@ -211,17 +195,13 @@
     background-repeat: no-repeat;
     background-size: cover; }
     #iphone12 .title {
-      font-size: 56px;
-      top: 20%; }
+      font-size: 56px; }
     #iphone12 .subText {
-      font-size: 28px;
-      top: 28%; }
+      font-size: 28px; }
     #iphone12 .price {
       font-size: 17px; }
-    #iphone12 .links {
-      top: 40%; }
-      #iphone12 .links .link {
-        font-size: 21px; } }
+    #iphone12 .links .link {
+      font-size: 21px; } }
 
 .apple-link {
   color: #2997ff;
@@ -233,6 +213,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/iphone-12-pro-hero-mobile.jpg");
@@ -240,10 +221,7 @@
   background-repeat: no-repeat;
   background-size: cover; }
   #iphone12Pro .title {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: 32px;
     font-weight: 500;
     color: white;
@@ -251,26 +229,17 @@
     text-align: center; }
   #iphone12Pro .subText {
     font-size: 19px;
-    position: absolute;
-    top: 17%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white; }
+    color: white;
+    padding: 5px 0 0; }
   #iphone12Pro .price {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     font-size: 14px;
     text-align: center;
     color: #919195;
     width: 100%;
     max-width: 250px; }
   #iphone12Pro .links {
-    position: absolute;
-    top: 32%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center; }
     #iphone12Pro .links :nth-child(1) {
@@ -291,21 +260,16 @@
     margin-top: 10px;
     height: 80vh; }
     #iphone12Pro .title {
-      font-size: 48px;
-      top: 11%; }
+      font-size: 48px; }
     #iphone12Pro .subText {
-      font-size: 24px;
-      top: 20%; }
+      font-size: 24px; }
     #iphone12Pro .price {
       font-size: 17px;
-      top: 28%;
       max-width: 100%; }
       #iphone12Pro .price br {
         display: none; }
-    #iphone12Pro .links {
-      top: 35%; }
-      #iphone12Pro .links .link {
-        font-size: 19px; } }
+    #iphone12Pro .links .link {
+      font-size: 19px; } }
 
 @media (min-width: 1000px) {
   #iphone12Pro {
@@ -332,7 +296,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/hero-ipad-pro-mobile.jpg");
@@ -341,28 +305,19 @@
   background-size: cover;
   margin-top: 10px; }
   #ipadPro .title {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: 32px;
     font-weight: 600;
     color: white; }
   #ipadPro .subText {
+    padding: 5px 0 0;
     font-size: 19px;
-    position: absolute;
-    top: 17%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: white;
     width: 100%;
     max-width: 90%;
     text-align: center; }
   #ipadPro .links {
-    position: absolute;
-    top: 24%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center; }
     #ipadPro .links :nth-child(1) {
@@ -382,15 +337,11 @@
     background-size: cover;
     height: 80vh; }
     #ipadPro .title {
-      font-size: 48px;
-      top: 10%; }
+      font-size: 48px; }
     #ipadPro .subText {
-      font-size: 24px;
-      top: 20%; }
-    #ipadPro .links {
-      top: 28%; }
-      #ipadPro .links .link {
-        font-size: 19px; } }
+      font-size: 24px; }
+    #ipadPro .links .link {
+      font-size: 19px; } }
 
 @media (min-width: 1000px) {
   #ipadPro {
@@ -415,6 +366,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background-color: #b1dcec;
@@ -424,10 +376,7 @@
   background-size: cover;
   margin-top: 10px; }
   #uniSection .title {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: 32px;
     font-weight: 500;
     line-height: 1.2;
@@ -436,10 +385,7 @@
     width: 100%;
     max-width: 80%; }
   #uniSection .links {
-    position: absolute;
-    top: 36%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center; }
     #uniSection .links .link {
@@ -448,6 +394,10 @@
       font-size: 17px; }
       #uniSection .links .link:hover {
         text-decoration: underline; }
+
+@media (max-width: 370px) {
+  #uniSection .title {
+    font-size: 20px; } }
 
 @media (min-width: 730px) {
   #uniSection {
@@ -458,17 +408,14 @@
     margin: 0px;
     height: 490px; }
     #uniSection .title {
-      top: 15%;
       font-size: 32px;
       font-weight: 600;
       line-height: 1.1;
       width: 90%; }
       #uniSection .title br {
         display: none; }
-    #uniSection .links {
-      top: 30%; }
-      #uniSection .links .link {
-        font-size: 17px; } }
+    #uniSection .links .link {
+      font-size: 17px; } }
 
 @media (min-width: 1000px) {
   #uniSection {
@@ -482,10 +429,8 @@
       font-weight: normal;
       max-width: 400px;
       font-weight: 600; }
-    #uniSection .links {
-      top: 25%; }
-      #uniSection .links .link {
-        font-size: 17px; } }
+    #uniSection .links .link {
+      font-size: 17px; } }
 
 .apple-link {
   color: #2997ff;
@@ -497,6 +442,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/watch-series-6-mobile.jpg");
@@ -505,27 +451,18 @@
   background-size: cover;
   margin-top: 10px; }
   #iwatchSection .watch-logo {
-    position: absolute;
-    top: 12%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     width: 100%;
     max-width: 150px; }
   #iwatchSection .subText {
-    position: absolute;
-    top: 22%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
     font-size: 19px;
     color: white;
     max-width: 90%; }
   #iwatchSection .links {
-    position: absolute;
-    top: 29%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center; }
     #iwatchSection .links :nth-child(1) {
@@ -537,6 +474,12 @@
       #iwatchSection .links .link:hover {
         text-decoration: underline; }
 
+@media (max-width: 370px) {
+  #iwatchSection .watch-logo {
+    width: 100px; }
+  #iwatchSection .subText {
+    font-size: 15px; } }
+
 @media (min-width: 730px) {
   #iwatchSection {
     background: url("../images/watch-series-6-medium.jpg");
@@ -545,10 +488,8 @@
     background-size: cover;
     margin: 0px;
     height: 490px; }
-    #iwatchSection .links {
-      top: 30%; }
-      #iwatchSection .links .link {
-        font-size: 19px; }
+    #iwatchSection .links .link {
+      font-size: 19px; }
     #iwatchSection .subText {
       font-size: 19px; } }
 
@@ -559,10 +500,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 580px; }
-    #iwatchSection .links {
-      top: 28%; }
-      #iwatchSection .links .link {
-        font-size: 17px; }
+    #iwatchSection .links .link {
+      font-size: 17px; }
     #iwatchSection .subText {
       font-size: 21px; } }
 
@@ -576,6 +515,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   margin-bottom: 35px;
@@ -585,10 +525,7 @@
   background-size: cover;
   margin-top: 10px; }
   #imacSection .title {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: 32px;
     font-weight: 600;
     line-height: 1.2;
@@ -597,17 +534,11 @@
     width: 100%;
     max-width: 90%; }
   #imacSection .subText {
+    padding: 5px 0 0;
     font-size: 19px;
-    position: absolute;
-    top: 17%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: #919195; }
   #imacSection .links {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center; }
     #imacSection .links :nth-child(1) {
@@ -680,6 +611,10 @@
       #appleAtWorkSection .links .link:hover {
         text-decoration: underline; }
 
+@media (max-width: 370px) {
+  #appleAtWorkSection .links {
+    left: 57%; } }
+
 @media (min-width: 730px) {
   #appleAtWorkSection {
     background: url("../images/apple_at_work_medium.jpg");
@@ -717,6 +652,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/billie_eilish-mobile.jpg");
@@ -725,13 +661,12 @@
   background-size: cover;
   margin-top: 10px; }
   #appleMusicSection .apple-music-logo {
-    padding-top: 35px;
+    padding: 40px 0 0;
     align-self: center;
     width: 100px; }
   #appleMusicSection .subText {
     font-size: 19px;
-    padding-top: 10px;
-    align-self: center;
+    padding: 5px 0 0;
     width: 100%;
     max-width: 50%;
     color: white;
@@ -739,7 +674,7 @@
   #appleMusicSection .links {
     display: flex;
     justify-content: center;
-    padding-top: 10px;
+    padding: 5px 0 0;
     width: 100%; }
     #appleMusicSection .links .link {
       text-decoration: none;
@@ -797,7 +732,7 @@
   margin-top: 10px;
   z-index: 1; }
   #appleTvSection .apple-tv-logo {
-    padding-top: 35px;
+    padding: 40px 0 0;
     width: 70px; }
   #appleTvSection .title {
     background: url("../images/ted_lasso_title_s2-mobile.png");
