--- a/sass/appleAtWorkSection.scss
+++ b/sass/appleAtWorkSection.scss
@@ -34,6 +34,14 @@
 }
 
 //media queries
+@media (max-width: 370px) {
+  #appleAtWorkSection {
+    .links {
+      left: 57%;
+    }
+  }
+}
+
 @media (min-width: 730px) {
   #appleAtWorkSection {
     background: url("../images/apple_at_work_medium.jpg");
