--- a/sass/appleMusicSection.scss
+++ b/sass/appleMusicSection.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/billie_eilish-mobile.jpg");
@@ -13,19 +14,14 @@
   margin-top: 10px;
 
   .apple-music-logo {
-    padding-top: 35px;
+    padding: 40px 0 0;
     align-self: center;
     width: 100px;
   }
 
   .subText {
     font-size: $font-size-subtext-small;
-    // position: absolute;
-    // top: 17%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    padding-top: 10px;
-    align-self: center;
+    padding: 5px 0 0;
     width: 100%;
     max-width: 50%;
     color: white;
@@ -35,7 +31,7 @@
   .links {
     display: flex;
     justify-content: center;
-    padding-top: 10px;
+    padding: 5px 0 0;
     width: 100%;
 
     .link {
