--- a/sass/imacSection.scss
+++ b/sass/imacSection.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   margin-bottom: 35px;
@@ -14,10 +15,7 @@
   margin-top: 10px;
 
   .title {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: $font-size-title-small;
     font-weight: 600;
     line-height: 1.2;
@@ -28,19 +26,13 @@
   }
 
   .subText {
+    padding: 5px 0 0;
     font-size: $font-size-subtext-small;
-    position: absolute;
-    top: 17%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: $text-clr-gray;
   }
 
   .links {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
 
