--- a/sass/ipadProSection.scss
+++ b/sass/ipadProSection.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/hero-ipad-pro-mobile.jpg");
@@ -14,21 +14,15 @@
   margin-top: 10px;
 
   .title {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: $font-size-title-small;
     font-weight: 600;
     color: white;
   }
 
   .subText {
+    padding: 5px 0 0;
     font-size: $font-size-subtext-small;
-    position: absolute;
-    top: 17%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: white;
     width: 100%;
     max-width: 90%;
@@ -36,10 +30,7 @@
   }
 
   .links {
-    position: absolute;
-    top: 24%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
 
@@ -70,16 +61,13 @@
 
     .title {
       font-size: $font-size-title-medium;
-      top: 10%;
     }
 
     .subText {
       font-size: $font-size-subtext-medium;
-      top: 20%;
     }
 
     .links {
-      top: 28%;
       .link {
         font-size: $font-size-link-medium;
       }
