--- a/sass/iphone12ProSection.scss
+++ b/sass/iphone12ProSection.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/iphone-12-pro-hero-mobile.jpg");
@@ -12,10 +13,7 @@
   background-size: cover;
 
   .title {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: $font-size-title-small;
     font-weight: 500;
     color: white;
@@ -25,18 +23,12 @@
 
   .subText {
     font-size: $font-size-subtext-small;
-    position: absolute;
-    top: 17%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: white;
+    padding: 5px 0 0;
   }
 
   .price {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     font-size: $font-size-price-small;
     text-align: center;
     color: $text-clr-gray;
@@ -45,10 +37,7 @@
   }
 
   .links {
-    position: absolute;
-    top: 32%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
 
@@ -80,17 +69,15 @@
 
     .title {
       font-size: $font-size-title-medium;
-      top: 11%;
     }
 
     .subText {
       font-size: $font-size-subtext-medium;
-      top: 20%;
     }
 
     .price {
       font-size: $font-size-price-medium;
-      top: 28%;
+
       max-width: 100%;
       br {
         display: none;
@@ -98,8 +85,6 @@
     }
 
     .links {
-      top: 35%;
-
       .link {
         font-size: $font-size-link-medium;
       }
