--- a/sass/iphone12Section.scss
+++ b/sass/iphone12Section.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 80vh;
   background: url("../images/iphone-12-hero-mobile.jpg");
@@ -13,37 +14,52 @@
   margin-top: 45px;
 
   .title {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: $font-size-title-small;
     font-weight: 500;
   }
+  // old way
+  // .title {
+  //   position: absolute;
+  //   top: 20%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   font-size: $font-size-title-small;
+  //   font-weight: 500;
+  // }
 
   .subText {
+    padding: 5px 0 0;
     font-size: $font-size-subtext-small;
-    position: absolute;
-    top: 26%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
+  //old way
+  // .subText {
+  //   position: absolute;
+  //   top: 26%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   font-size: $font-size-subtext-small;
+  // }
 
   .price {
-    position: absolute;
-    top: 32%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     font-size: $font-size-price-small;
     text-align: center;
     color: $text-clr-gray;
   }
+  // old way
+  // .price {
+  //   position: absolute;
+  //   top: 32%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   font-size: $font-size-price-small;
+  //   text-align: center;
+  //   color: $text-clr-gray;
+  // }
 
   .links {
-    position: absolute;
-    top: 39%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
 
     :nth-child(1) {
       padding-right: 15px;
@@ -59,6 +75,27 @@
       }
     }
   }
+  // old way
+  // .links {
+  //   position: absolute;
+  //   top: 39%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+
+  //   :nth-child(1) {
+  //     padding-right: 15px;
+  //   }
+
+  //   .link {
+  //     text-decoration: none;
+  //     color: $link-clr-blue;
+  //     font-size: $font-size-link-small;
+
+  //     &:hover {
+  //       text-decoration: underline;
+  //     }
+  //   }
+  // }
 }
 
 //media queries
@@ -72,17 +109,17 @@
 
     .title {
       font-size: $font-size-title-medium;
-      top: 18%;
+      // top: 18%;
     }
 
     .subText {
       font-size: $font-size-subtext-medium;
-      top: 26%;
+      // top: 26%;
     }
 
     .price {
       font-size: $font-size-price-medium;
-      top: 34%;
+      // top: 34%;
 
       br {
         display: none;
@@ -90,7 +127,7 @@
     }
 
     .links {
-      top: 42%;
+      // top: 42%;
       .link {
         font-size: $font-size-link-medium;
       }
@@ -107,12 +144,12 @@
 
     .title {
       font-size: $font-size-title-large;
-      top: 20%;
+      // top: 20%;
     }
 
     .subText {
       font-size: $font-size-subtext-large;
-      top: 28%;
+      // top: 28%;
     }
 
     .price {
@@ -120,7 +157,7 @@
     }
 
     .links {
-      top: 40%;
+      // top: 40%;
       .link {
         font-size: $font-size-link-large;
       }
