--- a/sass/iwatchSection.scss
+++ b/sass/iwatchSection.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background: url("../images/watch-series-6-mobile.jpg");
@@ -13,19 +14,13 @@
   margin-top: 10px;
 
   .watch-logo {
-    position: absolute;
-    top: 12%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     width: 100%;
     max-width: 150px;
   }
 
   .subText {
-    position: absolute;
-    top: 22%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
     font-size: $font-size-subtext-small;
@@ -44,10 +39,7 @@
   // }
 
   .links {
-    position: absolute;
-    top: 29%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
 
@@ -68,6 +60,18 @@
 }
 
 //media queries
+@media (max-width: 370px) {
+  #iwatchSection {
+    .watch-logo {
+      width: 100px;
+    }
+
+    .subText {
+      font-size: 15px;
+    }
+  }
+}
+
 @media (min-width: 730px) {
   #iwatchSection {
     background: url("../images/watch-series-6-medium.jpg");
@@ -78,8 +82,6 @@
     height: 490px;
 
     .links {
-      top: 30%;
-
       .link {
         font-size: $font-size-subtext-small-grid;
       }
@@ -100,7 +102,6 @@
     height: 580px;
 
     .links {
-      top: 28%;
       .link {
         font-size: $font-size-link-medium-grid;
       }
