--- a/sass/uniSection.scss
+++ b/sass/uniSection.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 70vh;
   background-color: #b1dcec;
@@ -14,10 +15,7 @@
   margin-top: 10px;
 
   .title {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 40px 0 0;
     font-size: $font-size-title-small;
     font-weight: 500;
     line-height: 1.2;
@@ -28,10 +26,7 @@
   }
 
   .links {
-    position: absolute;
-    top: 36%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 5px 0 0;
     width: 100%;
     text-align: center;
 
@@ -49,6 +44,14 @@
 
 //media queries
 // Make grid section
+@media (max-width: 370px) {
+  #uniSection {
+    .title {
+      font-size: 20px;
+    }
+  }
+}
+
 @media (min-width: 730px) {
   #uniSection {
     background: url("../images/uni-products-medium.jpg");
@@ -59,7 +62,6 @@
     height: 490px;
 
     .title {
-      top: 15%;
       font-size: $font-size-title-small-grid;
       font-weight: 600;
       line-height: 1.1;
@@ -71,8 +73,6 @@
     }
 
     .links {
-      top: 30%;
-
       .link {
         font-size: $font-size-link-small-grid;
       }
@@ -96,7 +96,6 @@
     }
 
     .links {
-      top: 25%;
       .link {
         font-size: $font-size-link-medium-grid;
       }
