--- a/sass/iwatchSection.scss
+++ b/sass/iwatchSection.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
+  min-height: 480px;
   background: url("../images/watch-series-6-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
