--- a/sass/appleAtWorkSection.scss
+++ b/sass/appleAtWorkSection.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   width: 100%;
   height: 70vh;
+  min-height: 480px;
   background: url("../images/apple_at_work_mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
