--- a/sass/appleMusicSection.scss
+++ b/sass/appleMusicSection.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
+  min-height: 480px;
   background: url("../images/billie_eilish-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
