--- a/sass/header.scss
+++ b/sass/header.scss
@@ -57,8 +57,8 @@
   width: 100%;
 
   &-header {
+    // justify-content: space-between;
     display: flex;
-    justify-content: space-between;
     padding: 12px 15px;
     width: 100%;
 
@@ -67,9 +67,9 @@
     }
 
     &-logo {
-      margin-right: calc(50% + 4px);
+      // margin-right: calc(50% + 4px);
+      margin-left: 43%;
       width: 20px;
-      height: min-content;
     }
   }
 
