--- a/sass/imacSection.scss
+++ b/sass/imacSection.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
+  min-height: 480px;
   margin-bottom: 35px;
   background: url("../images/imac-mobile.jpg");
   background-position: center;
