--- a/sass/ipadProSection.scss
+++ b/sass/ipadProSection.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
+  min-height: 500px;
   background: url("../images/hero-ipad-pro-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
