--- a/sass/iphone12ProSection.scss
+++ b/sass/iphone12ProSection.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
+  min-height: 500px;
   background: url("../images/iphone-12-pro-hero-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
