--- a/sass/iphone12Section.scss
+++ b/sass/iphone12Section.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 80vh;
+  min-height: 500px;
   background: url("../images/iphone-12-hero-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -18,28 +19,11 @@
     font-size: $font-size-title-small;
     font-weight: 500;
   }
-  // old way
-  // .title {
-  //   position: absolute;
-  //   top: 20%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  //   font-size: $font-size-title-small;
-  //   font-weight: 500;
-  // }
 
   .subText {
     padding: 5px 0 0;
     font-size: $font-size-subtext-small;
   }
-  //old way
-  // .subText {
-  //   position: absolute;
-  //   top: 26%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  //   font-size: $font-size-subtext-small;
-  // }
 
   .price {
     padding: 5px 0 0;
@@ -47,16 +31,6 @@
     text-align: center;
     color: $text-clr-gray;
   }
-  // old way
-  // .price {
-  //   position: absolute;
-  //   top: 32%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  //   font-size: $font-size-price-small;
-  //   text-align: center;
-  //   color: $text-clr-gray;
-  // }
 
   .links {
     padding: 5px 0 0;
@@ -75,27 +49,6 @@
       }
     }
   }
-  // old way
-  // .links {
-  //   position: absolute;
-  //   top: 39%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-
-  //   :nth-child(1) {
-  //     padding-right: 15px;
-  //   }
-
-  //   .link {
-  //     text-decoration: none;
-  //     color: $link-clr-blue;
-  //     font-size: $font-size-link-small;
-
-  //     &:hover {
-  //       text-decoration: underline;
-  //     }
-  //   }
-  // }
 }
 
 //media queries
@@ -109,17 +62,14 @@
 
     .title {
       font-size: $font-size-title-medium;
-      // top: 18%;
     }
 
     .subText {
       font-size: $font-size-subtext-medium;
-      // top: 26%;
     }
 
     .price {
       font-size: $font-size-price-medium;
-      // top: 34%;
 
       br {
         display: none;
@@ -127,7 +77,6 @@
     }
 
     .links {
-      // top: 42%;
       .link {
         font-size: $font-size-link-medium;
       }
@@ -144,12 +93,10 @@
 
     .title {
       font-size: $font-size-title-large;
-      // top: 20%;
     }
 
     .subText {
       font-size: $font-size-subtext-large;
-      // top: 28%;
     }
 
     .price {
@@ -157,7 +104,6 @@
     }
 
     .links {
-      // top: 40%;
       .link {
         font-size: $font-size-link-large;
       }
