--- a/sass/uniSection.scss
+++ b/sass/uniSection.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
+  min-height: 480px;
   background-color: #b1dcec;
   background: url("../images/uni-products-mobile.jpg");
   background-position: center;
